# UseAirs

./: .gitignore  .license-config.json  Cargo.toml  LICENSE.md  README.md  cubecl.toml  rustfmt.toml
crates/core/lib-calculator/: Cargo.toml  runtime.json
crates/core/lib-calculator/src/: error.rs  lib.rs  tensor.rs
crates/core/lib-calculator/src/model/: error.rs  mod.rs
crates/core/lib-calculator/src/model/xgboost/: training.rs
crates/core/lib-calculator/src/operation/: error.rs  mod.rs
crates/core/lib-calculator/src/operation/gpu/: error.rs  gput.rs  interval.rs  mem_rep.rs  mod.rs  pool.rs  worker.rs
crates/core/lib-calculator/src/operation/gpu/kernels/: argmax.rs  argmin.rs  base.rs  mod.rs  nccl.rs  negate.rs  one_minus.rs  padding.rs  prod.rs  sigmoid.rs  sum.rs  sum_adaptive.rs  to_tensor.rs  traits.rs  zip.rs
crates/core/lib-calculator/src/operation/gpu/kernels/sort/: alg.rs  cfg.rs  direction.rs  entry.rs  mod.rs  radix.rs  range.rs  test.rs
crates/core/lib-calculator/src/operation/gpu/kernels/sort/arged/: k1_arged.rs  mod.rs
crates/core/lib-calculator/src/operation/gpu/kernels/sort/values/: control.rs  k1_values.rs  mod.rs
crates/core/lib-calculator/src/operation/gpu/kernels/utils/: cfg.rs  dyn_mem.rs  error.rs  io.rs  kernel_args.rs  mod.rs  virtual_tensor.rs
crates/core/lib-calculator/src/operation/mgmt/: config.rs  coordinator.rs  environment.rs  error.rs  group_thread.rs  groups.rs  mod.rs  strategy.rs  threads.rs
crates/core/lib-stage/: Cargo.toml
crates/core/lib-stage/src/: error.rs  lib.rs  output_guard.rs
crates/core/lib-stage/src/data/: for_raw_table.rs  mod.rs
crates/core/lib-store/: Cargo.toml
crates/core/lib-store/src/: error.rs  lib.rs
crates/core/lib-store/src/cfg/: calc.rs  mod.rs  stage.rs
crates/core/playground/: Cargo.toml
crates/core/playground/src/: error.rs  main.rs
crates/examples/operation/: Cargo.toml
crates/examples/operation/src/: csv_bench.rs  main.rs  sorting_bench.rs
crates/use-ai/: Cargo.toml
crates/use-ai/src/: config_menu.rs  error.rs  main.rs  start_menu.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/calc/: calc.md  model.md
docs/src/macros/: README.md
docs/src/store/: store.md
docs/src/tooling/: useai.md
