[package]
name = "lib-calculator"
version = "0.1.0"
edition = "2021"

[features]
nccl = ["cudarc/nccl"]

[dependencies]


lib-store = { path = "../lib-store" }
serde = "1.0.217"
thiserror = "2.0.11"
ndarray = "0.16.1"
rand = "0.8.5"
bytemuck = "1.23.1"
sysinfo = "0.35.2"
crossbeam = "0.8.4"
num_cpus = "1.16"
cubecl-core = { workspace = true }
cubecl-common = { workspace = true }
cubecl-runtime = { workspace = true }
cubecl-reduce = { workspace = true }
cubecl-cuda = { workspace = true }
cubecl-macros = { workspace = true }
cubecl-std = { workspace = true }
cubecl = { workspace = true }
cudarc = { workspace = true }
core_affinity = "0.8.3"
